--- a/cafe.css
+++ b/cafe.css
@@ -4,7 +4,7 @@ body {
     box-sizing: border-box;
     font-family: 'poppins' , sans-serif;
     overflow-x: hidden;
-   
+     max-width:100%
 } 
 
 #hero {
@@ -87,3 +87,4 @@ footer {
 footer i {
     margin-left: 40px;
 }
+
