--- a/cafe.css
+++ b/cafe.css
@@ -4,7 +4,8 @@ body {
     box-sizing: border-box;
     font-family: 'poppins' , sans-serif;
     overflow-x: hidden !important;
-     max-width:100%
+     max-width:100% 
+    outline: 1px red solid
 } 
 
 #hero {
@@ -83,5 +84,6 @@ body {
 footer {
     padding-top: 80px;
 }  
+
 
 
