--- a/cafe.css
+++ b/cafe.css
@@ -34,6 +34,7 @@ body {
 
 #info  p {
     color: lightgray;
+    display:inline;
 
 }
 #about {
@@ -87,6 +88,7 @@ body {
 footer {
     padding-top: 80px;
 }  
+
 
 
 
